--- a/node/02-api-rest-nodejs/package.json
+++ b/node/02-api-rest-nodejs/package.json
@@ -7,7 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
     "lint": "eslint src --ext .ts --fix",
-    "test": "vitest"
+    "test": "vitest",
+    "build": "tsup src"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
     "@types/supertest": "^2.0.16",
     "eslint": "^8.55.0",
     "supertest": "^6.3.3",
+    "tsup": "^8.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.2",
     "vitest": "^1.0.1"
