--- a/react/04/pizza.shop/package.json
+++ b/react/04/pizza.shop/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -23,6 +27,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
+    "recharts": "^2.10.4",
     "sonner": "^1.3.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.1.0",
