--- a/react/04/pizzashop-api/package.json
+++ b/react/04/pizzashop-api/package.json
@@ -33,7 +33,7 @@
     "@types/react": "^18.2.39",
     "bun-types": "^1.0.14",
     "chalk": "5.3.0",
-    "drizzle-kit": "0.20.6",
+    "drizzle-kit": "latest",
     "eslint": "8.54.0",
     "eslint-plugin-drizzle": "^0.2.1",
     "eslint_d": "13.1.1",
