Creating infra:database setup

--- a/node/03-api-solid/.env
+++ b/node/03-api-solid/.env
@@ -1,1 +1,8 @@
 NODE_ENV=dev
+
+
+DATABASE_URL="postgresql://rayzen:bigsecret@localhost:5432/api_solid?schema=public"
+
+POSTGRESQL_USERNAME=rayzen
+POSTGRESQL_PASSWORD=bigsecret
+POSTGRESQL_DATABASE=api_solid
