--- a/node/03-api-solid/infra/compose.yaml
+++ b/node/03-api-solid/infra/compose.yaml
@@ -1,8 +1,7 @@
 services:
   database:
-    image: 'bitnami/postgresql:latest'
+    image: 'bitnami/postgresql'
     env_file:
       - ../.env
     ports: 
       - "5432:5432"
-
