--- a/node/03-api-solid/package.json
+++ b/node/03-api-solid/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx --watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "services:up" : "docker compose -f infra/compose.yaml up -d",
-    "services:down" : "docker compose -f infra/compose.yaml down"
+    "services:up": "docker compose -f infra/compose.yaml up -d",
+    "services:down": "docker compose -f infra/compose.yaml down"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
+    "@types/bcryptjs": "2.4.6",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.26.1",
     "zod": "3.22.4"
