--- a/node/03-api-solid/package.json
+++ b/node/03-api-solid/package.json
@@ -8,7 +8,10 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "services:up": "docker compose -f infra/compose.yaml up -d",
-    "services:down": "docker compose -f infra/compose.yaml down"
+    "services:down": "docker compose -f infra/compose.yaml down",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,10 +19,13 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.11.20",
+    "@vitest/coverage-v8": "1.3.1",
     "prisma": "5.10.2",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "1.3.1"
   },
   "dependencies": {
     "@prisma/client": "5.10.2",
