--- a/node/03-api-solid/package.json
+++ b/node/03-api-solid/package.json
@@ -4,14 +4,17 @@
   "description": "GymPass style app.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx --watch src/server.ts",
-    "build": "tsup src --out-dir build",
+    "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "services:up": "docker compose -f infra/compose.yaml up -d",
-    "services:down": "docker compose -f infra/compose.yaml down",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest --coverage"
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "build": "tsup src --out-dir build",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "keywords": [],
   "author": "",
@@ -28,12 +31,14 @@
     "vitest": "1.3.1"
   },
   "dependencies": {
+    "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.10.2",
     "@types/bcryptjs": "2.4.6",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.10",
     "dotenv": "16.4.5",
     "fastify": "4.26.1",
+    "npm-run-all": "4.1.5",
     "zod": "3.22.4"
   }
 }
