--- a/node/03-api-solid/package.json
+++ b/node/03-api-solid/package.json
@@ -13,6 +13,7 @@
     "test:watch": "vitest --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -22,8 +23,10 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.11.20",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "1.3.1",
     "prisma": "5.10.2",
+    "supertest": "7.0.0",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
     "typescript": "5.3.3",
