--- a/node/03-api-solid/package.json
+++ b/node/03-api-solid/package.json
@@ -34,6 +34,7 @@
     "vitest": "1.3.1"
   },
   "dependencies": {
+    "@fastify/cookie": "9.3.1",
     "@fastify/jwt": "8.0.1",
     "@prisma/client": "5.10.2",
     "@types/bcryptjs": "2.4.6",
