Changing the .github to the root

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -15,4 +15,6 @@ jobs:
         cache: 'npm'
       -run: npm ci
 
-      -run: npm run test
+      -name: Run tests
+        working-directory: node/03-api-solid
+        run: npm run test
