--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -17,8 +17,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar dependências
-        run: npm ci
-
+        run: |
+          cd node/03-api-solid
+          npm ci
+        
       - name: Executar testes
         working-directory: node/03-api-solid
         run: npm run test
