--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -25,5 +25,5 @@
 
       - run: npm run test:e2e
         env:
-          JWT_SECRET: testing
+          JWT_SECRET: test
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
