Adding working directory

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -23,6 +23,8 @@
         cd node/03-api-solid
         npm ci
 
+      name: Executar testes
+      working-directory: node/03-api-solid
       - run: npm run test:e2e
         env:
           JWT_SECRET: test
