--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -19,9 +19,9 @@
           node-version: 18
           cache: 'npm'
 
-      - run: | 
-        cd node/03-api-solid
-        npm ci
+        run: |
+          cd node/03-api-solid
+          npm ci
 
       name: Executar testes
       working-directory: node/03-api-solid
