--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,31 +1,33 @@
-    name: Run E2E Tests
-    runs-on: ubuntu-latest
+name: Run E2E Tests
+runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: bitnami/postgresql
-        ports:
-          - 5432:5432
-        env:
-          POSTGRESQL_USERNAME: docker
-          POSTGRESQL_PASSWORD: docker
-          POSTGRESQL_DATABASE: apisolid
+services:
+  postgres:
+    image: bitnami/postgresql
+    ports:
+      - 5432:5432
+    env:
+      POSTGRESQL_USERNAME: docker
+      POSTGRESQL_PASSWORD: docker
+      POSTGRESQL_DATABASE: apisolid
 
-    steps:
-      - uses: actions/checkout@v3
+steps:
+  - name: Checkout code
+    uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
+  - name: Set up Node.js
+    uses: actions/setup-node@v3
+    with:
+      node-version: 18
+      cache: 'npm'
 
-        run: |
-          cd node/03-api-solid
-          npm ci
+  - run: |
+      cd node/03-api-solid
+      npm ci
 
-      name: Executar testes
-      working-directory: node/03-api-solid
-      - run: npm run test:e2e
-        env:
-          JWT_SECRET: test
-          DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+  - name: Run tests
+    working-directory: node/03-api-solid
+    run: npm run test:e2e
+    env:
+      JWT_SECRET: test
+      DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
