--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,6 +1,6 @@
 name: Run E2E Tests
-
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
   run-e2e-tests:
@@ -28,7 +28,8 @@ jobs:
       - run: |
           cd node/03-api-solid
           npm ci
-      name: Executar testes
+
+      - name: Executar testes
         working-directory: node/03-api-solid
         run: npm run test:e2e
         env:
