Adding working directory on the dependency install step

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -18,16 +18,18 @@ jobs:
           POSTGRESQL_DATABASE: apisolid
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout código
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-node@v3
+      - name: Configurar Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
 
-      - run: |
-          cd node/03-api-solid
-          npm ci
+      - name: Instalar dependências
+        run: npm ci
+        working-directory: node/03-api-solid
 
       - name: Executar testes
         working-directory: node/03-api-solid
